style(app): added header style

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_API_URL=localhost:3001
+# Allows multiple domains separated by comma
+# Example: api.homolog.com,api.com....
+NEXT_IMAGES_DOMAINS=
