--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       "@types/*": [
         "./src/types/*"
       ],
+      "@components/*": [
+        "./src/components/*"
+      ],
     }
   },
   "include": [
