--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
     "husky": "^8.0.3",
+    "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
