--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
