--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@env": [
+        "./env.ts"
+      ]
     }
   },
   "include": [
@@ -40,7 +43,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "env.d.ts"
   ],
   "exclude": [
     "node_modules"
