refactor(env): change env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Allows multiple domains separated by comma
 # Example: api.homolog.com,api.com....
 NEXT_IMAGES_DOMAINS=
+
+NEXT_PUBLIC_API_BASE_URL=
