refactor(next-config): add remote patterns to image service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,10 @@
         "./src/components/*"
       ],
       "@env": [
-        "./env.ts"
+        "./env"
+      ],
+      "@api": [
+        "./src/service/api.ts"
       ]
     }
   },
