feat(homepage): add products by api response on home

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
       "@/*": [
         "./src/*"
       ],
-      "@types/*": [
+      "@global-types/*": [
         "./src/types/*"
       ],
       "@components/*": [
