--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.14",
     "husky": "^8.0.3",
     "lucide-react": "^0.292.0",
+    "nanoid": "^5.0.2",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,7 +32,7 @@
     "autoprefixer": "10.4.16",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "8.52.0",
+    "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
     "lint-staged": "^15.0.2",
     "postcss": "8.4.31",
