--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,13 @@
       ],
       "@api": [
         "./src/service/api.ts"
-      ]
+      ],
+      "@context/*": [
+        "./src/context/*"
+      ],
+      "@hooks/*": [
+        "./src/hooks/*"
+      ],
     }
   },
   "include": [
